# LichtFeld-Studio

.github/workflows/: clang-format.yml  nightly.yml  ubuntu.yml  windows.yml
cmake/: LinuxGuiSanity.cmake
eval/: benchmark_mipnerf360_improved_gs_plus.sh  benchmark_mipnerf360_mcmc.sh  benchmark_mipnerf360_mrnf.sh
src/app/: mcp_gui_tools.cpp
src/core/: argument_parser.cpp  scene.cpp  splat_data.cpp  splat_data_mirror.cpp  splat_data_transform.cpp  splat_simplify.cpp
src/core/cuda/: CMakeLists.txt
src/core/cuda/kernels/: selection_ops.cu  sh_layout.cu
src/core/include/core/: events.hpp  splat_data.hpp
src/core/include/core/cuda/: selection_ops.hpp  sh_layout.cuh
src/io/cuda/: kmeans.cu  kmeans.hpp
src/io/formats/: nurec_usdz.cpp  ply.cpp  rad.cpp  sogs.cpp  spz.cpp  usd.cpp
src/python/lfs/: py_selection.cpp  py_splat_data.cpp  py_ui.cpp
src/python/lfs_plugins/: toolbar.py
src/python/lfs_plugins/tool_defs/: builtin.py
src/python/stubs/lichtfeld/: keymap.pyi  selection.pyi
src/rendering/: gs_rasterizer_tensor.cpp
src/rendering/rasterizer/gsplat_fwd/: Ops.h  Rasterization.cpp  SphericalHarmonics.cpp  SphericalHarmonics.h  SphericalHarmonicsCUDA.cu
src/rendering/rasterizer/rasterization/include/: forward.h  gsplat_forward.h  kernel_utils.cuh  kernels_forward.cuh  rasterization_api_tensor.h
src/rendering/rasterizer/rasterization/src/: forward.cu  gsplat_forward.cu  rasterization_api_tensor.cu
src/training/: training_setup.cpp
src/training/control/: command_api.cpp
src/training/kernels/: grad_alpha.cu  grad_alpha.hpp
src/training/optimizer/: adam_optimizer.cpp  adam_optimizer.hpp
src/training/rasterization/: fast_rasterizer.cpp  fast_rasterizer.hpp  gsplat_rasterizer.cpp  gsplat_rasterizer.hpp
src/training/rasterization/gsplat/: Ops.h  Rasterization.cpp  SphericalHarmonics.cpp  SphericalHarmonics.h  SphericalHarmonicsCUDA.cu
src/training/strategies/: improved_gs_plus.cpp  mcmc.cpp  mrnf.cpp  mrnf.hpp
src/visualizer/: gui_capabilities.cpp
src/visualizer/core/: editor_context.hpp
src/visualizer/gui/: async_task_manager.cpp  gizmo_manager.cpp  gizmo_manager.hpp  panel_registry.cpp  video_export_utils.cpp
src/visualizer/gui/editor/: python_lsp_client.hpp
src/visualizer/gui/resources/locales/: de.json  en.json  fr.json  it.json  ja.json  ko.json  nl.json  pl.json  zh.json
src/visualizer/input/: input_bindings.cpp  input_bindings.hpp  input_controller.cpp
src/visualizer/operation/: undo_entry.cpp
src/visualizer/operator/ops/: selection_ops.cpp
src/visualizer/rendering/: rendering_types.hpp  vksplat_input_packer.cpp  vksplat_input_packer.hpp
src/visualizer/scene/: scene_manager.cpp
src/visualizer/selection/: selection_service.cpp  selection_service.hpp
src/visualizer/tools/: selection_tool.cpp
tests/: CMakeLists.txt  test_fastgs_analytical_gradients.cpp  test_mcmc.cpp  test_mcmc_relocate_optimizer_state_bug.cpp  test_mrnf_strategy.cpp  test_sh_swizzle_layout.cpp
tests/python/: test_toolbar_hooks.py
(+10 files in other folders)
